<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EBEDEF"

        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="20sp"
        android:layout_above="@id/msg2"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:id="@+id/msg1"
        />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/intro2"
         android:textSize="18sp"
         android:layout_above="@id/msg3"
         android:id="@+id/msg2"
         android:gravity="center"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro3"
        android:id="@+id/msg3"
        android:layout_above="@id/msg4"
        android:gravity="center"

        />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/intro4"
         android:id="@+id/msg4"
         android:layout_above="@id/image1"
         android:gravity="center"
         android:textStyle="bold"
         />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/question"
        android:id="@+id/image1"
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image1"
        android:layout_centerHorizontal="true"
        android:text="@string/click1"
        android:onClick="startMe"

        />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>